# ProphetDemo

./: Makefile  pyproject.toml
