[tool.poetry]
name = "prophetdemo"
version = "0.1.0"
description = ""
authors = ["lany93 <yanxing.lan@gmx.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
prophet = "^1.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
